src/test/resources/de/cd4analysis/cocos/mcg/valid/CD4AC2005.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2005 {
  public enum A;
  enum B;
}
