src/test/resources/de/cd4analysis/cocos/mcg/invalid/CD_1_44.cd
package de.cd4analysis.cocos;

classdiagram CD_1_44 {
  class A;
  class B;

  association Assoc1 abstract A -> B;
  association Assoc2 A -> B abstract;

}
